style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: black;
  height: 100vh;
  width: 100%;
  display: flex;
  margin: 0;
  padding: 0;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  position: relative;
}
#questionScreen,
#noScreen {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 100vh;
  height: 100vw;
  transform: translate(-50%, -50%) rotate(90deg);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: black;
  overflow: hidden;
}

#monkey {
  position: absolute;
  height: 60%;
  width: 25%;
  right: 5%;
  bottom: 10%;
  z-index: 1;
}

#catThink {
  position: absolute;
  height: 60%;
  width: 25%;
  left: 5%;
  bottom: 10%;
  z-index: 1;
}

#question {
  position: absolute;
  font-size: 200%;
  top: 10%;
  color: rgb(255, 255, 255);
  text-align: center;
  z-index: 5;
  width: 60%;
}

#yesimage,
#noimage {
  width: 100%;
  height: 100%;
  object-fit: contain;
  display: block;
  pointer-events: none;
}

#yesButton {
  position: relative;
  z-index: 2;
  cursor: pointer;
  border: none;
  background: transparent;
  padding: 0;
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 10px;
}

#noButton {
  position: relative;
  z-index: 2;
  cursor: pointer;
  border: none;
  background: transparent;
  padding: 0;
  width: 150px;
  height: 150px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 10px;
}

#hampster {
  display: block;
  height: 70px;
  width: 70px;
  position: absolute;
  left: 10%;
  top: 0;
  rotate: 180deg;
  transform: translateX(-50%) translateY(50%);
  opacity: 0;
  pointer-events: none;
  transition: transform 2s cubic-bezier(0.34, 1.2, 0.64, 1);
  z-index: 10;
  will-change: transform, opacity;
}

#yesButton:hover + #hampster {
  transform: translateX(-50%) translateY(+20%);
  opacity: 1;
}

#buttons-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 30px;
  margin-top: 10%;
  position: relative;
  z-index: 1;
}
#yesimage {
  width: 90%;
  height: 90%;
  object-fit: contain;
  display: block;
  pointer-events: none;
  border: none;
}
#noimage {
  width: 90%;
  height: 90%;
  object-fit: contain;
  display: block;
  pointer-events: none;
}

#giftScreen {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 100vh;
  height: 100vw;
  transform: translate(-50%, -50%) rotate(90deg);
  background-color: black;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

#giftButton {
  background-color: transparent;
  border: none;
  width: 26%;
  max-width: 416px;
  aspect-ratio: 1/1;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  cursor: pointer;
  border-radius: 50%;
}

#present {
  width: 100%;
  height: auto;
  display: block;
  transition: transform 0.3s ease;
}

#present:hover {
  transform: scale(1.1);
}

#circle {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 35%;
  max-width: 550px;
  aspect-ratio: 550/197;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

#arrow {
  width: 12%;
  max-width: 180px;
  aspect-ratio: 140/250;
  position: absolute;
  left: 23%;
  bottom: 0;
  rotate: 190deg;
}

#arrow1 {
  width: 12.5%;
  max-width: 195px;
  aspect-ratio: 150/200;
  position: absolute;
  right: 32%;
  top: 7%;
  rotate: -10deg;
}

#nga {
  width: 30%;
  max-width: 480px;
  aspect-ratio: 370/160;
  position: absolute;
  left: 30%;
  top: 0px;
  rotate: 180deg;
}

#comp {
  width: 30%;
  max-width: 480px;
  aspect-ratio: 370/200;
  position: absolute;
  left: 5%;
  top: 3%;
  rotate: 30deg;
}

#sbilly {
  width: 40%;
  max-width: 650px;
  aspect-ratio: 500/200;
  position: absolute;
  right: -10%;
  top: 20%;
  rotate: -90deg;
}

#shockEmoji {
  width: 16%;
  max-width: 260px;
  aspect-ratio: 200/330;
  position: absolute;
  right: 20%;
  top: 10%;
  rotate: -67deg;
  z-index: 50;
}

#will {
  position: absolute;
  left: 5%;
  top: 37%;
  width: 36%;
  max-width: 585px;
  aspect-ratio: 450/300;
}

#deer {
  position: absolute;
  left: 33%;
  bottom: 0;
  width: 36%;
  max-width: 585px;
  aspect-ratio: 450/180;
}

#guys {
  width: 32%;
  max-width: 520px;
  aspect-ratio: 400/200;
  position: absolute;
  right: 2%;
  bottom: 0;
  rotate: 0deg;
}

#holy {
  position: absolute;
  right: 13%;
  bottom: 25%;
  width: 32%;
  max-width: 520px;
  aspect-ratio: 400/200;
  z-index: 50;
  rotate: 20deg;
}

@keyframes spin {
  from {
    transform: rotate(0deg) scale(0.01);
  }
  to {
    transform: rotate(3330deg) scale(1);
  }
}

.mina-spin {
  animation: spin 2s linear forwards;
}

#mina {
  max-width: 400px;
  height: auto;
  border-radius: 20px;
  z-index: 20;
  position: relative;
  display: none;
}

#explosion {
  width: 400px;
  height: auto;
  z-index: 30;
  position: relative;
  display: none;
  rotate: 90deg;
}
#finalScreen {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 100vh;
  height: 100vw;
  transform: translate(-50%, -50%) rotate(90deg);
  display: flex;
  flex-direction: column;
  background-color: #111214;
  overflow: hidden;
  align-items: center;
}
#hbd {
  font-size: 200%;
  position: absolute;
  color: rgb(255, 255, 255);
  top: 4%;
  left: 50%;
  font-family: "Emilys Candy", serif;
  transform: translateX(-50%);
  white-space: nowrap;
  z-index: 100;
}
#queen {
  position: absolute;
  width: 20%;
  height: auto;
  left: 15%;
  top: 15%;
  rotate: -20deg;
}
#threecats {
  position: absolute;
  height: 140px;
  width: 245px;
  right: 0;
  bottom: 0;
}
#justin {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 30vh;
  width: auto;
  rotate: 5deg;
}
#baloons {
  display: flex;
  flex-direction: row;
  height: 26%;
  width: auto;
  position: absolute;
  right: 18%;
  top: 27%;
  rotate: 20deg;
}
#decor1 {
  position: absolute;
  left: 0;
  top: 0;
  width: 200px;
  height: auto;
  z-index: 60;
}
#decor {
  position: absolute;
  right: 0;
  top: 0;
  width: 200px;
  height: auto;
  z-index: 60;
}
#slavko {
  width: 30%;
  height: 60%;
  border-radius: 20px;
  z-index: 40;
  position: absolute;
  inset: 0;
  margin: auto;
  transition: transform 0.3s ease;
}

